Builds: follow the same icon/text pattern for "Wrap output"
This PR follows the same pattern we have in the other UI elements instead of
using a checkbox (which is the only one on that page).

Also, adds an icon to this element as the other elements in the same row.

--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -133,12 +133,11 @@
         <i class="fa-duotone fa-microscope icon"></i>
         {% trans "Debug" %}
       </a>
-      <div class="item">
-        <div class="ui small checkbox">
-          <input type="checkbox" data-bind="checked: is_wrapped" />
-          <label>Wrap output</label>
-        </div>
-      </div>
+      <a class="ui item"
+         data-bind="click: toggle_wrapped, css: {active: is_wrapped()}">
+        <i class="fa-duotone fa-arrows-left-right-to-line icon"></i>
+        {% trans "Wrap output" %}
+      </a>
       <div class="right menu">
 
         {% if request.user|is_admin:project %}
