Fix placeholder attachment

--- a/readthedocsext/theme/templates/projects/version_form.html
+++ b/readthedocsext/theme/templates/projects/version_form.html
@@ -112,7 +112,7 @@
 
             {# Placeholder until a version is selected #}
             {% block version_create_placeholder %}
-              <div class="ui placeholder segment">
+              <div class="ui top attached placeholder segment">
 
                 <div class="ui icon header">
                   {% trans "Configure a new branch or tag" %}
