--- a/readthedocsext/theme/templates/projects/version_form.html
+++ b/readthedocsext/theme/templates/projects/version_form.html
@@ -1,11 +1,9 @@
 {% extends "projects/base.html" %}
 
-{% load i18n %}
-{% load privacy_tags %}
-{% load crispy_forms_tags %}
-{% load crispy_forms_filters %}
+{% load crispy from crispy_forms_tags %}
+{% load trans blocktrans from i18n %}
 
-{% load ext_theme_tags %}
+{% load alter_field from ext_theme_tags %}
 
 {% block title %}
   {% if version %}
@@ -13,13 +11,13 @@
   {% else %}
     {% trans "Activate a new version" %}
   {% endif %}
-{% endblock %}
+{% endblock title %}
 
 {% block content-header %}
   {% with versions_active="active" %}
     {% include "projects/partials/header.html" %}
   {% endwith %}
-{% endblock %}
+{% endblock content-header %}
 
 {% block content %}
   <div class="ui very padded centered grid stackable">
@@ -32,9 +30,7 @@
           {% trans "Edit version" %}
         {% else %}
           {% trans "Activate a new version" %}
-          <span class="sub header">
-            {% trans "Select a version to activate" %}
-          </span>
+          <span class="sub header">{% trans "Select a version to activate" %}</span>
         {% endif %}
       </h2>
 
@@ -57,7 +53,7 @@
           <div class="content">
             {% if version.active %}
               <div class="ui warning message">
-                {% trans 'Deactivating a version will result in the deletion of its documentation.' %}
+                {% trans "Deactivating a version will result in the deletion of its documentation." %}
               </div>
             {% endif %}
 
@@ -102,9 +98,13 @@
               }
             </script>
 
-            <div class="ui fluid very short scrolling search" data-bind="semanticui: {search: search_config()}">
+            <div class="ui fluid very short scrolling search"
+                 data-bind="semanticui: {search: search_config()}">
               <div class="ui fluid icon large input">
-                <input class="ui text" type="text" placeholder="{% trans "Search versions" %}" tabindex="0">
+                <input class="ui text"
+                       type="text"
+                       placeholder="{% trans "Search versions" %}"
+                       tabindex="0">
                 <i class="fa-duotone fa-magnifying-glass icon"></i>
               </div>
               <div class="results" tabindex="0"></div>
@@ -112,7 +112,7 @@
 
             {# Placeholder until a version is selected #}
             {% block version_create_placeholder %}
-              <div class="ui placeholder segment">
+              <div class="ui top attached placeholder segment">
 
                 <div class="ui icon header">
                   {% trans "Configure a new branch or tag" %}
@@ -124,11 +124,24 @@
                       {% endblocktrans %}
                     </p>
 
-                    <a href="https://docs.readthedocs.io/en/stable/versions.html" class="ui primary button" target="_blank">
-                      {% trans "Learn more" %}
-                    </a>
+                    <a href="https://docs.readthedocs.io/en/stable/versions.html"
+                       class="ui primary button"
+                       target="_blank">{% trans "Learn more" %}</a>
                   </div>
                 </div>
+
+              </div>
+              <div class="ui small bottom attached center aligned message">
+
+                {% trans "Are your versions out of date?" %}
+
+                <readthedocs-button-sync-versions class="ui mini black basic compact right aligned button"
+                                                  url="{% url "projects-sync-versions" project.slug %}"
+                                                  csrf-token="{{ csrf_token }}">
+                  <i class="fa-solid fa-arrows-rotate icon"></i>
+                  {% trans "Resync versions" %}
+                </readthedocs-button-sync-versions>
+
               </div>
             {% endblock version_create_placeholder %}
           </div>
