--- a/readthedocsext/theme/templates/projects/edit_base.html
+++ b/readthedocsext/theme/templates/projects/edit_base.html
@@ -13,7 +13,7 @@
       <div class="ui vertical pointing fluid menu">
 
         <div class="item">
-          <div class="header">Setup</div>
+          <div class="header">{% trans "Setup" %}</div>
           <div class="menu">
             <a class="item {% block project_edit_active %}{% endblock project_edit_active %}"
                href="{% url "projects_edit" project.slug %}">{% trans "Settings" %}</a>
@@ -28,7 +28,7 @@
         </div>
 
         <div class="item">
-          <div class="header">Building</div>
+          <div class="header">{% trans Building %}</div>
           <div class="menu">
             <a class="item {% block project_integrations_active %}{% endblock project_integrations_active %}"
                href="{% url "projects_integrations" project.slug %}">{% trans "Git integrations" %}</a>
@@ -42,7 +42,7 @@
         </div>
 
         <div class="item">
-          <div class="header">Hosting</div>
+          <div class="header">{% tans "Hosting" %}</div>
           <div class="menu">
             <a class="item {% block project_subprojects_active %}{% endblock project_subprojects_active %}"
                href="{% url "projects_subprojects" project.slug %}">{% trans "Subprojects" %}</a>
@@ -54,7 +54,7 @@
         </div>
 
         <div class="item">
-          <div class="header">Maintaining</div>
+          <div class="header">{% trans "Maintaining" %}</div>
           <div class="menu">
             <a class="item {% block project_redirects_active %}{% endblock project_redirects_active %}"
                href="{% url "projects_redirects" project.slug %}">{% trans "Redirects" %}</a>
