--- a/readthedocsext/theme/templates/projects/edit_base.html
+++ b/readthedocsext/theme/templates/projects/edit_base.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="item">
-          <div class="header">{% tans "Hosting" %}</div>
+          <div class="header">{% trans "Hosting" %}</div>
           <div class="menu">
             <a class="item {% block project_subprojects_active %}{% endblock project_subprojects_active %}"
                href="{% url "projects_subprojects" project.slug %}">{% trans "Subprojects" %}</a>
