--- a/readthedocsext/theme/templates/projects/edit_base.html
+++ b/readthedocsext/theme/templates/projects/edit_base.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="item">
-          <div class="header">{% trans Building %}</div>
+          <div class="header">{% trans "Building" %}</div>
           <div class="menu">
             <a class="item {% block project_integrations_active %}{% endblock project_integrations_active %}"
                href="{% url "projects_integrations" project.slug %}">{% trans "Git integrations" %}</a>
