--- a/readthedocsext/theme/templates/projects/partials/header.html
+++ b/readthedocsext/theme/templates/projects/partials/header.html
@@ -187,10 +187,13 @@ collapsed, to save visual space and can be expanded with the right label.
             {% trans "Settings" %}
           </a>
         {% endif %}
-        <a class="item" href="{{ project.get_docs_url }}">
-          <i class="fa-duotone fa-book icon"></i>
-          {% trans "Visit docs" %}
-        </a>
+        {# Show top-level view docs button on non-build pages #}
+        {% if not build %}
+          <a class="item" href="{{ project.get_docs_url }}">
+            <i class="fa-duotone fa-book icon"></i>
+            {% trans "Visit docs" %}
+          </a>
+        {% endif %}
       </div>
     </div>
 
