Use same language

--- a/readthedocsext/theme/templates/projects/partials/header.html
+++ b/readthedocsext/theme/templates/projects/partials/header.html
@@ -191,7 +191,7 @@ collapsed, to save visual space and can be expanded with the right label.
         {% if not build %}
           <a class="item" href="{{ project.get_docs_url }}">
             <i class="fa-duotone fa-book icon"></i>
-            {% trans "Visit docs" %}
+            {% trans "View docs" %}
           </a>
         {% endif %}
       </div>
