Account settings: link to 2FA page

--- a/readthedocsext/theme/templates/mfa/base_manage.html
+++ b/readthedocsext/theme/templates/mfa/base_manage.html
@@ -9,6 +9,9 @@
 {% block profile_admin_security %}
   active
 {% endblock profile_admin_security %}
+{% block profile_admin_mfa %}
+  active
+{% endblock profile_admin_mfa %}
 {% block edit_content_header %}
   {% trans "Security" %}
 {% endblock edit_content_header %}
