--- a/readthedocsext/theme/templates/account/password_change.html
+++ b/readthedocsext/theme/templates/account/password_change.html
@@ -4,11 +4,15 @@
 {% load crispy from crispy_forms_tags %}
 
 {% block title %}
-  {% trans "Security" %}
+  {% trans "Change password" %}
 {% endblock title %}
 {% block profile_admin_security %}
   active
 {% endblock profile_admin_security %}
+{% block profile_admin_change_password %}
+  active
+{% endblock profile_admin_change_password %}
+active
 {% block edit_content_header %}
   {% trans "Security" %}
 {% endblock edit_content_header %}
