--- a/readthedocsext/theme/templates/profiles/base_edit.html
+++ b/readthedocsext/theme/templates/profiles/base_edit.html
@@ -28,7 +28,7 @@
               <a class="item {% block profile_admin_change_password %}{% endblock %}"
                  href="{% url 'account_change_password' %}">{% trans "Change password" %}</a>
               <a class="item {% block profile_admin_mfa %}{% endblock %}"
-                 href="{% url 'mfa_index' %}">{% trans "Two-Factor Authentication" %}</a>
+                 href="{% url 'mfa_index' %}">{% trans "Two-Factor authentication" %}</a>
             </div>
           </div>
           <a class="item {% block profile_admin_social_accounts %}{% endblock %}"
