--- a/readthedocsext/theme/templates/account/password_change.html
+++ b/readthedocsext/theme/templates/account/password_change.html
@@ -4,17 +4,15 @@
 {% load crispy from crispy_forms_tags %}
 
 {% block title %}
-  {% trans "Security" %}
-{% endblock title %}
-{% block profile_admin_security %}
-  active
-{% endblock profile_admin_security %}
-{% block edit_content_header %}
-  {% trans "Security" %}
-{% endblock edit_content_header %}
-{% block edit_content_subheader %}
   {% trans "Change password" %}
-{% endblock edit_content_subheader %}
+{% endblock title %}
+{% block profile_admin_change_password %}
+  active
+{% endblock profile_admin_change_password %}
+active
+{% block edit_content_header %}
+  {% trans "Change password" %}
+{% endblock edit_content_header %}
 
 {% block edit_content %}
   <form method="post" action="." class="ui form">
