--- a/readthedocsext/theme/templates/projects/partials/edit/redirect_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/redirect_list.html
@@ -24,7 +24,9 @@
   {% blocktrans trimmed %}
     No redirects exist yet
   {% endblocktrans %}
-  <div class="sub header">{% trans "Redirects allow you to fix links to pages that have moved." %}</div>
+  <div class="sub header">
+    {% trans "Redirects allow you to fix links to pages that have moved." %}
+  </div>
 {% endblock list_placeholder_header %}
 {% block list_placeholder_text %}
   <a class="ui button"
