--- a/readthedocsext/theme/templates/account/partials/email_list.html
+++ b/readthedocsext/theme/templates/account/partials/email_list.html
@@ -11,8 +11,7 @@
 {% block top_menu %}
 {% endblock top_menu %}
 
-{% block create_button %}
-{% endblock %}
+{% block create_button %}{% endblock %}
 
 {% block list_placeholder_icon_class %}fa-duotone fa-envelope-dot{% endblock %}
 {% block list_placeholder_header %}
@@ -35,7 +34,10 @@
         <i class="fa-solid fa-star icon"></i>
         <form action="{{ form_url }}" method="post">
           {% csrf_token %}
-          <input type="hidden" name="email" {% if object.primary %}checked="checked"{% endif %} value="{{ object.email }}"/>
+          <input type="hidden"
+                 name="email"
+                 {% if object.primary %}checked="checked"{% endif %}
+                 value="{{ object.email }}" />
           <input type="hidden" name="action_primary" value="" />
         </form>
       </div>
@@ -45,7 +47,10 @@
         <i class="fa-solid fa-refresh icon"></i>
         <form action="{{ form_url }}" method="post">
           {% csrf_token %}
-          <input type="hidden" name="email" {% if object.primary %}checked="checked"{% endif %} value="{{ object.email }}"/>
+          <input type="hidden"
+                 name="email"
+                 {% if object.primary %}checked="checked"{% endif %}
+                 value="{{ object.email }}" />
           <input type="hidden" name="action_send" value="" />
         </form>
       </div>
@@ -64,9 +69,7 @@
 {% block list_item_header %}
   <div>
     {{ object.email }}
-    {% if object.primary %}
-      <i class="fa-solid fa-star icon"></i>
-    {% endif %}
+    {% if object.primary %}<i class="fa-solid fa-star icon"></i>{% endif %}
   </div>
   <div class="sub header">
     <div class="ui horizontal list">
@@ -82,9 +85,7 @@
         </span>
       {% endif %}
       {% if object.primary %}
-        <span class="item">
-          {% trans "Primary email" %}
-        </span>
+        <span class="item">{% trans "Primary email" %}</span>
       {% endif %}
     </div>
   </div>
