--- a/readthedocsext/theme/templates/account/email.html
+++ b/readthedocsext/theme/templates/account/email.html
@@ -1,6 +1,6 @@
 {% extends "profiles/base_edit.html" %}
 
-{% load i18n %}
+{% load trans blocktrans from i18n %}
 {% load crispy_forms_tags %}
 
 {% block title %}{% trans "Email addresses" %}{% endblock %}
