--- a/readthedocsext/theme/templates/gold/partials/projects_list.html
+++ b/readthedocsext/theme/templates/gold/partials/projects_list.html
@@ -1,6 +1,6 @@
 {% extends "includes/crud/table_list.html" %}
 
-{% load i18n %}
+{% load trans blocktrans from i18n %}
 
 {% block top_menu %}
 {% endblock top_menu %}
