--- a/readthedocsext/theme/templates/projects/partials/edit/user_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/user_list.html
@@ -1,12 +1,8 @@
 {% extends "includes/crud/table_list.html" %}
 
-{% load i18n %}
+{% load trans blocktrans from i18n %}
 
-{% load gravatar %}
-
-{% load core_tags %}
-{% load privacy_tags %}
-{% load projects_tags %}
+{% load gravatar_url from gravatar %}
 
 {% block top_left_menu_items %}
 {% endblock top_left_menu_items %}
