--- a/readthedocsext/theme/templates/account/email.html
+++ b/readthedocsext/theme/templates/account/email.html
@@ -1,7 +1,7 @@
 {% extends "profiles/base_edit.html" %}
 
 {% load trans blocktrans from i18n %}
-{% load crispy_forms_tags %}
+{% load crispy from crispy_forms_tags %}
 
 {% block title %}
   {% trans "Email addresses" %}
