--- a/readthedocsext/theme/templates/gold/partials/projects_list.html
+++ b/readthedocsext/theme/templates/gold/partials/projects_list.html
@@ -5,8 +5,11 @@
 {% block top_menu %}
 {% endblock top_menu %}
 
-{% block list_placeholder_class %}ui short placeholder segment{% endblock list_placeholder_icon_class %}
-{% block list_placeholder_icon %}{% endblock list_placeholder_icon %}
+{% block list_placeholder_class %}
+  ui short placeholder segment
+{% endblock list_placeholder_icon_class %}
+{% block list_placeholder_icon %}
+{% endblock list_placeholder_icon %}
 {% block list_placeholder_header %}
   {% blocktrans trimmed %}
     Ad-free projects
