--- a/readthedocsext/theme/templates/projects/partials/edit/user_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/user_list.html
@@ -13,7 +13,8 @@
   {% include "includes/crud/create_button.html" with url=create_url text=create_text %}
 {% endblock create_button %}
 
-{% block list_placeholder_icon %}{% endblock list_placeholder_icon %}
+{% block list_placeholder_icon %}
+{% endblock list_placeholder_icon %}
 {% block list_placeholder_header %}
   {% blocktrans trimmed %}
     This project currently has no maintainers.
@@ -38,7 +39,7 @@
 
 {% block list_item_image %}
   <img class="ui rounded square image"
-       alt={% trans "User avatar" %}
+       alt="{% trans "User avatar" %}"
        src="{% gravatar_url object.email 64 %}">
 {% endblock list_item_image %}
 
