--- a/readthedocsext/theme/templates/account/email.html
+++ b/readthedocsext/theme/templates/account/email.html
@@ -6,7 +6,9 @@
 {% block title %}
   {% trans "Email addresses" %}
 {% endblock title %}
-{% block profile_admin_change_email %}active{% endblock profile_admin_change_email %}
+{% block profile_admin_change_email %}
+  active
+{% endblock profile_admin_change_email %}
 {% block edit_content_header %}
   {% trans "Email addresses" %}
 {% endblock edit_content_header %}
