--- a/readthedocsext/theme/templates/account/partials/email_list.html
+++ b/readthedocsext/theme/templates/account/partials/email_list.html
@@ -5,9 +5,12 @@
 {% block top_menu %}
 {% endblock top_menu %}
 
-{% block create_button %}{% endblock create_button %}
+{% block create_button %}
+{% endblock create_button %}
 
-{% block list_placeholder_icon_class %}fa-duotone fa-envelope-dot{% endblock list_placeholder_icon_class %}
+{% block list_placeholder_icon_class %}
+  fa-duotone fa-envelope-dot
+{% endblock list_placeholder_icon_class %}
 {% block list_placeholder_header %}
   {% blocktrans trimmed %}
     No email addresses have been configured yet
